alignment fix

--- a/assets/scss/_sensint/_style.scss
+++ b/assets/scss/_sensint/_style.scss
@@ -166,7 +166,8 @@ span.big, p.big {
     border-left: 15px solid $sensint-lightpurple;
     padding-left: 15px;
     @media (max-width: 768px) {
-      border-left: 20px solid $sensint-lightpurple;
+      margin-left: 1px;
+      border-left: 19px solid $sensint-lightpurple;
     }
   }
   .Header-description {
